--- a/asset/css/trangchu.css
+++ b/asset/css/trangchu.css
@@ -28,18 +28,30 @@ section{
 
 .hotPlace__list{
   display: flex;
-  justify-content: center;
+  justify-content:center;
   align-items: center;
 }
 
 .pl__item{
   width: 33.3333%;
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
-.pl__item img{
-  width: 99%;
+
+.pl__item:nth-child(2){
+  box-sizing: border-box;
+  margin: 0 8px;
+}
+
+.pl__img{
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+}
+
+.pl__img img{
+  width: 100%;
   height: 258px;
-  margin-right: 10px;
+  /* margin:0 5px; */
   border-radius: 20px;
 }
 
