--- a/asset/css/trangchu.css
+++ b/asset/css/trangchu.css
@@ -1,59 +1,60 @@
-.container{
+.container {
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center ;
+  align-items: center;
 }
 
-.places{
+.places {
   width: 80%;
 }
 
-.title{
+.title {
   margin: 0;
   font-size: 36px;
 }
 
-.content{
+.content {
   margin-bottom: 20px;
 }
 
-section{
+section {
   margin-bottom: 40px;
 }
-.section__hd{
+
+.section__hd {
   display: flex;
   justify-content: space-between;
 }
 
-.hotPlace__list{
+.hotPlace__list {
   display: flex;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
 }
 
-.pl__item{
+.pl__item {
   width: 33.3333%;
 }
 
-.pl__item:nth-child(2){
+.pl__item:nth-child(2) {
   box-sizing: border-box;
   margin: 0 8px;
 }
 
-.pl__img{
+.pl__img {
   display: flex;
   justify-content: center;
 }
 
-.pl__img img{
+.pl__img img {
   width: 100%;
   height: 258px;
   /* margin:0 5px; */
   border-radius: 20px;
 }
 
-.pl__name{
+.pl__name {
   text-align: center;
 }
 
@@ -85,6 +86,7 @@ section{
 }
 
 .ft_thongtin {
+
   list-style: none;
   padding: 0;
   margin: 0;
@@ -103,7 +105,8 @@ section{
 }
 
 .ft_ketnoi {
-  padding: 24px;
+  margin-top: 18px;
+  /* padding: 24px; */
   border-radius: 10px;
   /* font-size: 20px;
   margin-bottom: 18px; */
