--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -185,3 +185,8 @@ header{
   white-space: nowrap;
 }
 
+.hd__bottom-link-login{
+  text-decoration: none;
+  color: #0c92eb;
+  font-size: 20px;
+}
