--- a/asset/css/diadiemhot.css
+++ b/asset/css/diadiemhot.css
@@ -1,41 +1,42 @@
-  .container{
+  .container {
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center ;
+    align-items: center;
   }
 
-  .places{
+  .places {
     width: 80%;
   }
 
-  .title{
+  .title {
     margin: 0;
     font-size: 36px;
     text-align: center;
-    color: #7cc5f6;
+    color: #0c92eb;
   }
-  .hotPlace__list{ 
+
+  .hotPlace__list {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     gap: 10px;
     margin-top: 20px;
   }
 
-  .pl__item{
+  .pl__item {
     box-sizing: border-box;
     width: calc((100% - 20px) / 3);
     margin-bottom: 20px;
     cursor: pointer;
   }
 
-  .pl__item:hover{
-    color:#7cc5f6;
+  .pl__item:hover {
+    color: #7cc5f6;
   }
-  
-  .pl__item:hover img{
+
+  .pl__item:hover img {
     transform: scale(1.1);
   }
 
@@ -44,19 +45,19 @@
     margin: 0 5px;
   } */
 
-  .pl__img{
+  .pl__img {
     display: flex;
     justify-content: center;
     overflow: hidden;
     border-radius: 20px;
   }
 
-  .pl__img img{
+  .pl__img img {
     width: 100%;
     height: 258px;
   }
 
-  .pl__name{
+  .pl__name {
     text-align: center;
     font-size: 18px;
     font-weight: 500;
