--- a/asset/css/theomien.css
+++ b/asset/css/theomien.css
@@ -1,24 +1,26 @@
-  .container{
+  .container {
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center ;
+    align-items: center;
   }
 
-  .places{
+  .places {
     width: 80%;
   }
 
-  section{
+  section {
     margin-bottom: 20px;
   }
 
-  .title{
+  .title {
     margin: 0;
     font-size: 36px;
-    color: #7cc5f6;
+    color: #0c92eb;
+
   }
-  .hotPlace__list{ 
+
+  .hotPlace__list {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -28,7 +30,7 @@
     scrollbar-width: thin;
   }
 
-  .pl__item{
+  .pl__item {
     box-sizing: border-box;
     width: calc((100% - 20px) / 3);
     margin-bottom: 20px;
@@ -36,11 +38,11 @@
     flex-shrink: 0;
   }
 
-  .pl__item:hover{
-    color:#7cc5f6;
+  .pl__item:hover {
+    color: #7cc5f6;
   }
-  
-  .pl__item:hover img{
+
+  .pl__item:hover img {
     transform: scale(1.1);
   }
 
@@ -49,25 +51,25 @@
     margin: 0 5px;
   } */
 
-  .pl__img{
+  .pl__img {
     display: flex;
     justify-content: center;
     overflow: hidden;
     border-radius: 20px;
   }
 
-  .pl__img img{
+  .pl__img img {
     width: 100%;
     height: 258px;
   }
 
-  .pl__name{
+  .pl__name {
     text-align: center;
     font-size: 18px;
     font-weight: 500;
   }
 
-  .no-place{
+  .no-place {
     font-size: 20px;
     font-weight: 600;
   }
