--- a/asset/css/theomien.css
+++ b/asset/css/theomien.css
@@ -28,14 +28,18 @@
     margin-top: 20px;
     overflow-x: auto;
     scrollbar-width: thin;
+    padding: 10px 0  ;
   }
 
   .pl__item {
     box-sizing: border-box;
     width: calc((100% - 20px) / 3);
-    margin-bottom: 20px;
     cursor: pointer;
     flex-shrink: 0;
+    border-radius: 20px;
+    box-shadow: 0 0 10px #ababab;
+    overflow: hidden;
+    padding-bottom: 10px;
   }
 
   .pl__item:hover {
@@ -55,7 +59,6 @@
     display: flex;
     justify-content: center;
     overflow: hidden;
-    border-radius: 20px;
   }
 
   .pl__img img {
@@ -67,6 +70,7 @@
     text-align: center;
     font-size: 18px;
     font-weight: 500;
+    margin-top: 10px;
   }
 
   .no-place {
