--- a/asset/css/theomien.css
+++ b/asset/css/theomien.css
@@ -28,6 +28,7 @@
     margin-top: 20px;
     overflow-x: auto;
     scrollbar-width: thin;
+    scrollbar-color: #dbdbdb transparent;
     padding: 10px 0  ;
   }
 
