--- a/asset/css/diadiemhot.css
+++ b/asset/css/diadiemhot.css
@@ -7,6 +7,11 @@
 
   .places {
     width: 80%;
+    background-color: #fff;
+    box-sizing: border-box;
+    padding: 20px 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #d5d5d5;
   }
 
   .title {
