--- a/asset/css/theomien.css
+++ b/asset/css/theomien.css
@@ -3,14 +3,25 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
   }
 
   .places {
     width: 80%;
+    background-color: #fff;
+    box-sizing: border-box;
+    padding: 20px 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #d5d5d5;
   }
 
   section {
     margin-bottom: 20px;
+  }
+  
+  section+section{
+    margin-bottom: 40px;
+
   }
 
   .title {
@@ -25,7 +36,7 @@
     justify-content: flex-start;
     align-items: center;
     gap: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
     overflow-x: auto;
     scrollbar-width: thin;
     scrollbar-color: #dbdbdb transparent;
@@ -38,9 +49,10 @@
     cursor: pointer;
     flex-shrink: 0;
     border-radius: 20px;
-    box-shadow: 0 0 10px #ababab;
+    box-shadow: 0 0 10px #d5d5d5;
     overflow: hidden;
     padding-bottom: 10px;
+    background-color: #eaf8fb;
   }
 
   .pl__item:hover {
