--- a/asset/css/diadiemhot.css
+++ b/asset/css/diadiemhot.css
@@ -40,6 +40,7 @@
     box-shadow: 0 0 10px #ababab;
     overflow: hidden;
     padding-bottom: 10px;
+    background-color: #eaf8fb;
   }
 
   .pl__item:hover {
