--- a/asset/css/trangchu.css
+++ b/asset/css/trangchu.css
@@ -57,7 +57,7 @@ section {
 
 .pl__item {
   width: 33.3333%;
-  box-shadow: 0 0 10px #c3c3c3;
+  box-shadow: 0 0 10px #aaaaaa;
   border-radius: 20px;
   overflow: hidden;
   padding-bottom: 10px;
